force-app/main/default/objects/Employer_Subscription__c/Employer_Subscription__c.object-meta.xml
<CustomObject>
    <description>Track employer subscription status, tiers, and billing.</description>
    <label>Employer Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employer Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>