force-app/main/default/objects/Employer_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Employer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer Subscriptions</relationshipLabel>
    <relationshipName>Employer_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>