force-app/main/default/objects/Employer_Subscription__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Invoice recipient</description>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>