force-app/main/default/objects/Employer_Subscription__c/fields/Cancel_At_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Cancel_At_Period_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will cancel at period end</description>
    <label>Cancel at End</label>
    <type>Checkbox</type>
</CustomField>