force-app/main/default/objects/Employer_Subscription__c/fields/Current_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_End__c</fullName>
    <description>Current billing period end</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>