force-app/main/default/objects/Employer_Subscription__c/fields/Failed_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Payment_Count__c</fullName>
    <description>Consecutive failures</description>
    <label>Failed Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>