force-app/main/default/objects/Employer_Subscription__c/fields/Features_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Features_Enabled__c</fullName>
    <description>JSON of enabled features</description>
    <label>Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>