force-app/main/default/objects/Employer_Subscription__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>Most recent amount</description>
    <label>Last Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>