force-app/main/default/objects/Employer_Subscription__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Most recent payment</description>
    <label>Last Payment</label>
    <type>Date</type>
</CustomField>