force-app/main/default/objects/Employer_Subscription__c/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <description>Current monthly rate</description>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>