force-app/main/default/objects/Employer_Subscription__c/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <description>cus_xxxxx</description>
    <label>Stripe Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>