force-app/main/default/objects/Employer_Subscription__c/fields/Stripe_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID__c</fullName>
    <description>sub_xxxxx</description>
    <label>Stripe Subscription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>