force-app/main/default/objects/Employer_Subscription__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>