force-app/main/default/objects/Employer_Subscription__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>Paid subscription start</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>