force-app/main/default/objects/Employer_Subscription__c/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>