force-app/main/default/objects/Employer_Subscription__c/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>When trial expires</description>
    <label>Trial End</label>
    <type>Date</type>
</CustomField>