force-app/main/default/objects/Employer_Subscription__c/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>When trial began</description>
    <label>Trial Start</label>
    <type>Date</type>
</CustomField>