force-app/main/default/objects/Employer_Subscription__c/validationRules/Stripe_IDs_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Stripe_IDs_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Subscription_Tier__c, &apos;Free&apos;)),
  ISBLANK(Stripe_Customer_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Stripe_Customer_ID__c</errorDisplayField>
    <errorMessage>Stripe IDs required for non-Free tiers</errorMessage>
</ValidationRule>